syntax = "proto3";

package greet;

option go_package="github.com\\Alemkhan\\grpc-go-course\\greet\\greetpb;greetpb";

message NumberRequest{
  int32 number = 1;
}

message NumberResponse{
  int32 result = 1;
}

message AverageResponse {
  double result = 1;
}

service CalculatorService {
  rpc PrimeNumberDecomposition(NumberRequest) returns (stream NumberResponse);
  rpc ComputerAverage(stream NumberRequest) returns (AverageResponse);
}